# django-includecontents

./: .gitignore  .prettierrc  AGENTS.md  CHANGES.md  Justfile  README.md  debug_class_negation.py  debug_context.py  debug_simple_class.py  debug_slot_context.py  index.html  mkdocs.yml  package-lock.json  package.json  plan.md  pyproject.toml  versions.json
.github/workflows/: docs.yml  publish.yml  python-app.yml  release.yml  test.yml
2.5/: 404.html  index.html  objects.inv  sitemap.xml
2.5/search/: search_index.json
3.0/: 404.html  index.html  sitemap.xml
3.0/icons/: index.html
3.0/search/: search_index.json
3.0/storage-backends/: index.html
3.1/: 404.html  index.html  sitemap.xml
3.1/icons/: index.html
4.0/: 404.html  index.html  sitemap.xml
4.0/icons/: index.html
4.0/search/: search_index.json
changes/: +19b8c760.bugfix.md  +4995e084.bugfix.md  +attrs-spread.feature.md  +class-prepend.feature.md  +component-showcase.feature.md  +context-processors-for-components.feature.md  +css-variables-in-sprites.feature.md  +django52-finder-bug.bugfix.md  +enhanced-error-messages.feature.md  +enum-multiple-values.feature.md  +fix-jinja-props-undefined.bugfix.md  +fix-js-event-modifiers.bugfix.md  +fix-nested-content-blocks.bugfix.md  +fix-nested-context-processors.bugfix.md  +fix-self-closing-nested.bugfix.md  +fix-symbol-ids.bugfix.md  +icon-error-reporting.feature.md  +icon-system.feature.md  +iconify-api-cache.feature.md  +javascript-framework-attributes.feature.md  +jinja2-template-engine-support.feature.md  +loader-compatibility.feature.md  +loud-build-failures.feature.md  +mixed-content-attributes.feature.md  +multiline-closing-tags.bugfix.md  +not-filter.feature.md  +object-passing.bugfix.md  +prop-definition-refactor.misc.md  +prop-types-validation.feature.md  +props-caching.feature.md  +remove-storage-backends.removal.md  +simplified-architecture.misc.md  +template-tags-in-attributes.feature.md  +template-vars.feature.md  +typed-props-system.feature.md  +wrapif-node-traversal.bugfix.md  1.bugfix.md  2.feature.md  3.feature.md  5.bugfix.md  (+3 more)
coverage/: lcov.info
dev/: index.html  sitemap.xml
dev/search/: search_index.json
djangox/: backend.py  base.py  engine.py
djangox/templatetags/: includecontents.py
docs/: changelog.md  example-project.md  icons.md  index.md  installation.md  prop-validation.md  quickstart.md  storage-backends.md
docs/advanced/: component-patterns.md  custom-engine.md  multiline-tags.md
docs/building-components/: advanced-props.md  best-practices.md  component-patterns.md  css-and-styling.md
docs/components/: advanced-props.md  css-classes.md  html-syntax.md  props-and-attrs.md
docs/getting-started/: basic-concepts.md  installation.md  jinja2-setup.md  quickstart.md
docs/icons/: styling-with-css-variables.md
docs/integration/: prettier.md  tailwind.md  vscode.md
docs/reference/: api-reference.md  development.md  migration-guide.md  troubleshooting.md
docs/showcase/: component-discovery.md  (+7 more)
example_project/: manage.py  settings.py  tailwind.config.js  urls.py  wsgi.py
includecontents/: __init__.py  backend.py  base.py  engine.py  errors.py  loaders.py  next_version.py  prop_types.py  props.py
showcase/: README.md  __init__.py  access.py  apps.py  forms.py  models.py  registry.py  urls.py  views.py
tests/: README.md  parity.md  settings.py  test_attrs_callable.py  test_attrs_spread.py  test_cached_loader_unless_debug.py  test_complete_integration.py  test_component.py  test_context_processors.py  test_csrf.py  test_django_prop_types.py  test_enhanced_errors.py  test_enum_props.py  test_finder_order.py  test_html_type.py  test_icon_validation.py  test_icons.py  test_icons_integration.py  test_ignore_patterns.py  test_loader_replacement.py  test_multichoice.py  test_multiline.py  test_nested_content.py  test_path_normalization.py  test_prop_caching.py  test_prop_caching_working.py  test_prop_validation.py  test_prop_validation_integration.py  test_registry_introspection.py  test_tag.py  test_template_attribute_reuse.py  test_template_tags_in_attrs.py  test_template_typed_coercion.py  test_wrapif.py
(+488 files in other folders)
