[project]
name = "django-includecontents"
description = "Django includecontents component-like tag"
authors = [{ name = "Chris Beaven", email = "smileychris@gmail.com" }]
dynamic = ["version"]
dependencies = ["django", "packaging"]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Framework :: Django :: 5",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/SmileyChris/django-includecontents"
Documentation = "https://smileychris.github.io/django-includecontents/"

[project.optional-dependencies]
test = ["pytest", "pytest-django", "pytest-mock"]
deploy = ["pdm", "pdm.backend"]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "pymdown-extensions>=9.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
tag_regex = 'v(?P<version>[0-9]+(\.[0-9]+)+)'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false
pythonpath = "."

[tool.towncrier]
directory = "changes"
name = "django-includecontents"
package = "includecontents"
filename = "CHANGES.md"
issue_format = "[{issue}]: https://github.com/SmileyChris/django-includecontents/issues/{issue}"
